--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "aws-cdk": "2.23.0",
+    "esbuild": "^0.14.38",
     "jest": "^27.5.1"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito": "^1.155.0",
     "aws-cdk-lib": "2.23.0",
     "constructs": "^10.0.0"
   }
